--- a/src/Xutim/Bundle/CoreBundle/templates/admin/page/page_list.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/page/page_list.html.twig
@@ -16,7 +16,7 @@
 
 {% if selectedPage %}
     {%
-        set trans = selectedPage.translationByLocaleOrAny(content_context_language())
+        set trans = selectedPage.translationByLocaleOrAny(content_context_language(), default_locale)
     %}
 {% endif %}
 
