--- a/src/Xutim/Bundle/CoreBundle/templates/admin/revision/translation_revisions.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/revision/translation_revisions.html.twig
@@ -105,20 +105,73 @@
             {% endif %}
         </div>
 
-        <div class="col-md-9">
-            <h2>Title</h2>
-            {% if titleDiff is defined %}
-                {{ titleDiff|raw }}
-            {% else %}
-                {{ translation.title }}
-            {% endif %}
+        <div class="col-md-9" data-controller="revision-filter">
+            <div class="d-flex justify-content-end align-items-center mb-3">
+                <div></div>
+
+                <button
+                    type="button"
+                    class="btn btn-sm btn-outline-primary"
+                    data-action="revision-filter#toggle"
+                    data-revision-filter-target="toggleBtn"
+                >
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        class="icon icon-tabler icon-tabler-filter"
+                        width="20"
+                        height="20"
+                        viewBox="0 0 24 24"
+                        stroke-width="2"
+                        stroke="currentColor"
+                        fill="none"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                    >
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <path d="M4 4h16v2.172a2 2 0 0 1 -.586 1.414l-4.414 4.414v7l-6 2v-8.5l-4.48 -4.928a2 2 0 0 1 -.52 -1.345v-2.227z" />
+                    </svg>
+                    {{ 'Only Changed'|trans({}, 'admin') }}
+                </button>
+            </div>
+
+            <h2>{{ 'Intro title'|trans({}, '') }}</h2>
+
+            <p>
+                {% if preTitleDiff is defined and preTitleDiff %}
+                    {{ preTitleDiff|raw }}
+                {% else %}
+                    {{ translation.preTitle|default('-') }}
+                {% endif %}
+            </p>
+
+            <h2>{{ 'Title'|trans({}, '') }}</h2>
+
+            <p>
+                {% if titleDiff is defined and titleDiff %}
+                    {{ titleDiff|raw }}
+                {% else %}
+                    {{ translation.title|default('-') }}
+                {% endif %}
+            </p>
+
+            <h2>{{ 'Subtitle'|trans({}, '') }}</h2>
+
+            <p>
+                {% if subTitleDiff is defined and subTitleDiff %}
+                    {{ subTitleDiff|raw }}
+                {% else %}
+                    {{ translation.subTitle|default('-') }}
+                {% endif %}
+            </p>
 
             <h2 class="mt-4">Description</h2>
-            {% if descriptionDiff is defined %}
-                {{ descriptionDiff|raw }}
-            {% else %}
-                {{ translation.description }}
-            {% endif %}
+            <p>
+                {% if descriptionDiff is defined %}
+                    {{ descriptionDiff|raw }}
+                {% else %}
+                    {{ translation.description }}
+                {% endif %}
+            </p>
 
             <h2 class="mt-4">Content</h2>
 
