--- a/src/Xutim/Bundle/CoreBundle/templates/admin/common/translatable.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/common/translatable.html.twig
@@ -1,4 +1,4 @@
-{% macro languageBadge(translation) %}
+{% macro languageBadge(translation, altLocale = null) %}
     {% import '@XutimCore/admin/common/badges.html.twig' as badges %}
 
     {% if translation.locale != content_context_language() %}
@@ -6,13 +6,19 @@
     {% endif %}
 {% endmacro %}
 
-{% macro titleWithBadge(translatable) %}
+{% macro titleWithBadge(translatable, altLocale = null) %}
     {%
         import '@XutimCore/admin/common/translatable.html.twig' as translatableMacro
     %}
-    {%
-        set trans = translatable.getTranslationByLocaleOrDefault(content_context_language())
-    %}
+    {% if altLocale is null %}
+        {%
+            set trans = translatable.getTranslationByLocaleOrDefault(content_context_language())
+        %}
+    {% else %}
+        {%
+            set trans = translatable.getTranslationByLocaleOrFallback(content_context_language(), altLocale)
+        %}
+    {% endif %}
 
     {{ translatableMacro.languageBadge(trans) }}
     {{ trans }}
