feat(core-bundle): assign uploaded files to current folder
When uploading a new file from within a folder, the file is now
automatically assigned to that folder instead of being placed in
the root media library.

--- a/src/Xutim/Bundle/CoreBundle/templates/admin/media/list.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/media/list.html.twig
@@ -67,7 +67,7 @@
         tag="a"
         variant="nav"
         data-turbo-frame="modal"
-        href="{{ admin_path('admin_media_new') }}"
+        href="{{ admin_path('admin_media_new', {id: currentFolder.id|default(null)}) }}"
     >
         <twig:Xutim:Admin:Icon name="photo" class="me-1" />
         {{ 'New file'|trans({}, 'admin') }}
