fix(core-bundle): prepend new files to media list
Change turbo stream action from append to prepend so newly uploaded
files appear at the top of the list instead of the bottom.

--- a/src/Xutim/Bundle/CoreBundle/templates/admin/media/new.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/media/new.html.twig
@@ -25,7 +25,7 @@
 {% endblock %}
 
 {% block stream_success %}
-    <turbo-stream action="append" targets="#media-list">
+    <turbo-stream action="prepend" targets="#media-list">
         <template>
             {{ include('@XutimCore/admin/media/_row.html.twig') }}
         </template>
