--- a/src/Xutim/Bundle/CoreBundle/templates/admin/media/list.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/media/list.html.twig
@@ -88,40 +88,7 @@
         id="media-folder-list"
     >
         {% for folder in folders %}
-            {% set childrenCnt = folder.children|length %}
-            {% set filesCnt = folder.files|length %}
-            <div
-                class="col"
-                id="folder-{{ folder.id }}"
-                data-controller="drop-target"
-                data-drop-target-id-value="{{ folder.id }}"
-                data-drop-target-move-url-value="{{ path('admin_media_move_file_to_folder') }}"
-                data-action="dragover->drop-target#over dragleave->drop-target#leave drop->drop-target#drop"
-            >
-                <a
-                    class="card card-link"
-                    href="{{ admin_path('admin_media_list', {id: folder.id}) }}"
-                    data-drop-target-target="folderCard"
-                >
-                    <div
-                        class="card-body d-flex align-items-center gap-2"
-                        data-drop-target-target="folderCard"
-                    >
-                        <twig:Xutim:Admin:Icon name="folder" />
-                        <div class="flex-fill">
-                            <div class="fw-medium text-truncate">
-                                {{ folder.name }}
-                            </div>
-                            <div class="text-secondary small">
-                                {{ childrenCnt|default(0) }}
-                                {{ 'folders'|trans({}, 'admin') }},
-                                {{ filesCnt|default(0) }}
-                                {{ 'files'|trans({}, 'admin') }}
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
+            {{ include('@XutimCore/admin/media/_folder_card.html.twig', {folder: folder}) }}
         {% endfor %}
         <div class="col">
             <twig:Xutim:Admin:Button
