--- a/src/Xutim/Bundle/CoreBundle/templates/admin/settings/_settings_navigation.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/settings/_settings_navigation.html.twig
@@ -5,13 +5,13 @@
     <div class="list-group list-group-transparent">
         <a
             href="{{ admin_path('admin_settings_site') }}"
-            class="list-group-item list-group-item-action {% if app.current_route == 'admin_settings_site' %}active{% endif %}"
+            class="list-group-item list-group-item-action d-flex align-items-center {% if app.current_route == 'admin_settings_site' %}active{% endif %}"
         >
             {{ 'Site'|trans({}, 'admin')|capitalize }}
         </a>
 
         <a
-            class="list-group-item list-group-item-action {% if app.current_route starts with 'admin_user' %}active{% endif %}"
+            class="list-group-item list-group-item-action d-flex align-items-center {% if app.current_route starts with 'admin_user' %}active{% endif %}"
             href="{{ admin_path('admin_user_list', {searchTerm: ''}) }}"
         >
             <span class="nav-link-icon d-md-none d-lg-inline-block">
@@ -23,7 +23,7 @@
         </a>
         <a
             href="{{ admin_path('admin_menu_list') }}"
-            class="list-group-item list-group-item-action {% if app.current_route starts with 'admin_menu' %}active{% endif %}"
+            class="list-group-item list-group-item-action d-flex align-items-center {% if app.current_route starts with 'admin_menu' %}active{% endif %}"
         >
             {{ 'Menu'|trans({}, 'admin')|capitalize }}
         </a>
