feat(core-bundle): add editing presence detection with draft-change notification

--- a/src/Xutim/Bundle/CoreBundle/templates/admin/article/article_edit.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/article/article_edit.html.twig
@@ -89,6 +89,17 @@
 {% endblock %}
 
 {% block body %}
+    {% if translation is not null and translation.published %}
+    <div data-controller="editing-presence"
+         data-editing-presence-heartbeat-url-value="{{ admin_path('admin_content_translation_heartbeat', {id: translation.id}) }}"
+         data-editing-presence-stop-url-value="{{ admin_path('admin_content_translation_stop_editing', {id: translation.id}) }}"
+         data-editing-presence-mercure-topic-value="{{ mercure('content-translation/' ~ translation.id ~ '/presence') }}"
+         data-editing-presence-current-user-id-value="{{ app.user.id }}">
+        {{ include('@XutimCore/admin/content_translation/_editing_presence_banner.html.twig') }}
+        {{ include('@XutimCore/admin/content_translation/_draft_changed_banner.html.twig') }}
+    </div>
+    {% endif %}
+    {{ include('@XutimCore/admin/content_draft/_draft_banner.html.twig') }}
     <div
         data-controller="split-view"
         data-split-view-target="root"
